calico-cloud_versioned_docs/version-3.15/_includes/content/_non-cluster-binary-install.mdx
import NonClusterReadOnlyStep from '@site/calico-cloud_versioned_docs/version-3.15/_includes/content/_non-cluster-read-only-step.mdx';

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<NonClusterReadOnlyStep />

### Step 2: Download and extract the binary

This step requires Docker, but it can be run from any machine with Docker installed. It doesn't have to be the host you will run it on (i.e your laptop is fine).

1. Use the following command to download the {{nodecontainer}} image.

   ```batch
   docker pull {{registry}}{% component_image("cnx-node") %}
   ```

1. Confirm that the image has loaded by typing `docker images`.

   ```
   REPOSITORY       TAG           IMAGE ID       CREATED         SIZE
   {{registry}}{{ releases.0.components.cnx-node.image }}      {{ releases.0.components.cnx-node.version }}        e07d59b0eb8a   2 minutes ago   42MB
   ```

1. Create a temporary {{nodecontainer}} container.

   ```batch
   docker create --name container {{registry}}{% component_image("cnx-node") %}
   ```

1. Copy the calico-node binary from the container to the local file system.

   ```batch
   docker cp container:/bin/calico-node {{nodecontainer}}
   ```

1. Delete the temporary container.

   ```batch
   docker rm container
   ```

1. Set the extracted binary file to be executable.

   ```batch
   chmod +x {{nodecontainer}}
   ```

### Step 3: Copy the `calico-node` binary

Copy the binary from Step 2 to the target machine, using any means (`scp`, `ftp`, USB stick, etc.).

### Step 4: Create environment file

<EnvironmentFile nodecontainer='{{nodecontainer}}' />

### Step 5: Start Felix

There are a few ways to start Felix: create a startup script, or manually configure Felix.

<Tabs>
<TabItem label="Startup script" value="Startup script-0">

Felix should be started at boot by your init system and the init system
**must** be configured to restart Felix if it stops. Felix relies on
that behavior for certain configuration changes.

If your distribution uses systemd, then you could use the following unit file:

    [Unit]
    Description=Calico Felix agent
    After=syslog.target network.target

    [Service]
    User=root
    EnvironmentFile=/etc/calico/calico.env
    ExecStartPre=/usr/bin/mkdir -p /var/run/calico
    ExecStart=/usr/local/bin/{{nodecontainer}} -felix
    KillMode=process
    Restart=on-failure
    LimitNOFILE=32000

    [Install]
    WantedBy=multi-user.target

Or, for upstart:

    description "Felix (Calico agent)"
    author "Project Calico Maintainers <maintainers@projectcalico.org>"

    start on stopped rc RUNLEVEL=[2345]
    stop on runlevel [!2345]

    limit nofile 32000 32000

    respawn
    respawn limit 5 10

    chdir /var/run

    pre-start script
      mkdir -p /var/run/calico
      chown root:root /var/run/calico
    end script

    exec /usr/local/bin/{{nodecontainer}} -felix

**Start Felix**

After you've configured Felix, start it via your init system.

```batch
service calico-felix start
```

</TabItem>
<TabItem label="Manually configure Felix" value="Manually configure Felix-1">

Configure Felix by creating a file at `/kubernetes/calico/felix.cfg`.
<!--TODO-XREF-CC
See [Felix configuration](/reference/felix/configuration) for help with environment variables.
-->

:::note

Felix tries to detect whether IPv6 is available on your platform but
the detection can fail on older (or more unusual) systems. If Felix
exits soon after startup with `ipset` or `iptables` errors try
setting the `Ipv6Support` setting to `false`.

:::

Next, configure Felix to interact with a Kubernetes datastore. You
must set the `DatastoreType` setting to `kubernetes`. You must also set the environment variable `CALICO_KUBECONFIG`
to point to a valid kubeconfig for your kubernetes cluster and `CALICO_NETWORKING_BACKEND` to `none`.

:::note

For the Kubernetes datastore, Felix works in policy-only mode. Even though pod networking is
disabled on the baremetal host Felix is running on, policy can still be used to secure the host.

:::

</TabItem>
  </Tabs>
